objects/Asset_Contact_Roles__c.object
<CustomObject>
    <description>Junction object between Assets and Contacts used to assign Roles for Contacts listed on an Asset</description>
    <label>Asset Contact Role</label>
    <nameField>
        <displayFormat>ACR-{0000000}</displayFormat>
        <label>Asset Contact Roles Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Contact_Role_for_Asset__c</fullName>
        <label>Contact Role for Asset</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Asset owner</fullName>
                </value>
                <value>
                    <fullName>Core facility manager</fullName>
                </value>
                <value>
                    <fullName>Power user</fullName>
                </value>
                <value>
                    <fullName>Standard user</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Related_to_Contact__c</fullName>
        <label>Asset Related to Contact</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Contacts that Asset is Related to</relationshipLabel>
        <relationshipName>Asset_Related_to_Contact_Roles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_Related_to_Asset__c</fullName>
        <label>Contact Related to Asset</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assets that Contact is Related to</relationshipLabel>
        <relationshipName>Asset_Contact_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
</CustomObject>